k8s/appsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: appsearch
  name: appsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appsearch
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: appsearch
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms2g -Xmx2g
        - name: allow_es_settings_modification
          value: "true"
        - name: elasticsearch.host
          value: http://elasticsearch:9200
        - name: app_search.external_url
          value: http://localhost
        image: docker.elastic.co/app-search/app-search:7.6.0
        name: appsearch
        ports:
        - containerPort: 3002
        resources: {}
      restartPolicy: Always
status: {}
