k8s/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: broker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: broker
    spec:
      containers:
      - env:
        - name: RABBITMQ_DEFAULT_PASS
          value: wh4tsth3d34l
        - name: RABBITMQ_DEFAULT_USER
          value: celery
        - name: RABBITMQ_DEFAULT_VHOST
          value: celery
        image: rabbitmq:3.8.2
        name: broker
        resources: {}
      restartPolicy: Always
status: {}
