k8s/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: broker
  name: broker
spec:
  ports:
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: broker
