k8s/broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: broker
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: broker
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.19.0 (f63a961c)
      labels:
        io.kompose.service: broker
    spec:
      containers:
      - env:
        - name: RABBITMQ_DEFAULT_PASS
          value: wh4tsth3d34l
        - name: RABBITMQ_DEFAULT_USER
          value: celery
        - name: RABBITMQ_DEFAULT_VHOST
          value: celery
        image: rabbitmq:3.8.2
        name: broker
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  labels:
    io.kompose.service: broker
  name: broker
spec:
  ports:
  - name: rabbitmq
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: broker
