k8s/appsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: appsearch
  name: appsearch
spec:
  ports:
  - name: "3002"
    port: 3002
    targetPort: 3002
  selector:
    io.kompose.service: appsearch
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: appsearch-127-0-0-1.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: appsearch
            servicePort: 3002
