k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: appsearch-127-0-0-1.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: appsearch
            servicePort: 3002
  - host: web-127-0-0-1.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 5000
  - host: flower-127-0-0-1.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: celeryflower
            servicePort: 5555
